--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="main_menu">Main Menu</string>
+    <string name="title_activity_department_information">Department Information</string>
+    <string name="title_activity_maps_page">Campus Maps</string>
 </resources>
