--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="messaging">Messaging</string>
     <string name="announcements">Announcements</string>
     <string name="discord">Discord</string>
+    <string name="title_activity_alerts">Alerts</string>
+    <string name="title_news">News</string>
+    <string name="title_sign_in">Sign In</string>
 </resources>
