--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="discord">Discord</string>
     <string name="title_activity_alerts">Alerts</string>
     <string name="title_news">News</string>
+    <string name="home">Home</string>
 </resources>
