Added the AcademicCalendar.kt to test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="home">Home</string>
     <string name="app_logo_description">App Logo</string>
     <string name="umflint_logo_description">UM-Flint Logo</string>
+    <string name="title_activity_academic_calendar">AcademicCalendar</string>
 </resources>
