Added send announcements page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="title_student_messaging">Student Messaging</string>
     <string name="title_schedule_advisor">Schedule Advisor</string>
     <string name="title_schedule_group_meeting">Schedule Group Meeting</string>
+    <string name="send_announcements">Send Announcement</string>
 </resources>
