--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="signInBodyText">Welcome to the University of Michigan-Flint App, you have access to messaging, scheduling, and role notifications now! Click here to logout.</string>
     <string name="signInHeaderDefault">SIGN IN WITH UM-GOOGLE</string>
     <string name="signInBodyDefault">UM-Flint App is better with an account, customize and personalize it so it works for you!</string>
+    <string name="building_hours">Building Hours</string>
 </resources>
